fix: Spacing issue on chrysalis

--- a/client/src/scss/card.scss
+++ b/client/src/scss/card.scss
@@ -215,7 +215,6 @@
 
     .card--content__input {
       display: flex;
-      margin-bottom: 0;
 
       .color {
         color: #108cff;
